# PASCS-MP

./: .gitignore  CMakeLists.txt  DictionaryGeneration.h  LR.h  Makefile  README.md  SampleNormalization.h  check_sparse_res.py  cmake_install.cmake  run  run_dict.cpp  run_fix  run_new.cpp  run_random  run_random.cpp  run_test.cpp
scripts/: run_maxpooling.sh  run_new.sh  run_random.sh  test.py
selectpatch/: get_MMS.m  run_selectpatch.asv  run_selectpatch.m  run_selectpatch.sh  run_selectpatch_rand.m  select_patches_new.m  select_patches_random.m
src/: LR.h  SCC.h  SCC_copy.h  maxpooling.py  run.cpp  run_correntropy.cpp  run_random.cpp
